# AlgorithmCodeCollection

1的数目/: src.go  题目.txt
Elevetor/: CMakeLists.txt  Elevator.cpp  Elevator.h  Elevators.cpp  Elevators.h  Humans.cpp  Humans.h  MessageBus.h  Messages.h  README.txt  Threads.cpp  Threads.h  Utils.h  main.cpp  run.bat
Elevetor/docs/: SchedualElevators.mdj  readme.docx  report.docx  tests.xlsx
Elevetor/src/: Elevator.cpp  Elevator.h  Elevators.cpp  Humans.cpp  Humans.h  MessageBus.h  Messages.h  Threads.cpp  Utils.cpp  Utils.h  main.cpp
回溯法-八皇后/: eight-queen.cpp
随机快排/: random_quick_sort.cpp
